--- a/test.html
+++ b/test.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 <script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.11.3.min.js"></script>
+<script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+<script src="main.js"></script>
 <script>
 $(document).ready(function(){
     $("p").click(function(){
@@ -10,11 +12,17 @@ $(document).ready(function(){
 });
 </script>
 </head>
-<body>
+<body ng-app="myApp" ng-controller="myController">
 
 <p>If you click on me, I will disappear.</p>
 <p>Click me away!</p>
 <p>Click me too!</p>
+
+<div>
+    <input type="text" ng-model="username" />
+    <input type="password" ng-model="password" />
+    <button ng-click="doLogin()">Login</button>
+</div>
 
 </body>
 </html>
