--- a/test.html
+++ b/test.html
@@ -24,5 +24,14 @@ $(document).ready(function(){
     <button ng-click="doLogin()">Login</button>
 </div>
 
+<div class="preloader loading">
+  <span class="slice"></span>
+  <span class="slice"></span>
+  <span class="slice"></span>
+  <span class="slice"></span>
+  <span class="slice"></span>
+  <span class="slice"></span>
+</div>
+
 </body>
 </html>
