--- a/test.html
+++ b/test.html
@@ -11,6 +11,7 @@ $(document).ready(function(){
     });
 });
 </script>
+<link rel="stylesheet" type="text/css" href="mystyle.css">
 </head>
 <body ng-app="myApp" ng-controller="myController">
 
