--- a/scoreme/cricketScoreBoard.html
+++ b/scoreme/cricketScoreBoard.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="utf-8"/>
     <title>Cricket Score Board</title>
-    <!--<link rel="stylesheet" href="./css/scoreBoardStyles.css" />-->
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/scoreBoardStyles.css" />
+    <!--<link rel="stylesheet" href="./css/style.css" />-->
 <body >
 <div class="weatherWrapper" ng-controller="weatherWidgetController">
     <div class="weather_container weather-widget">
